# my-py-algorithms

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/my_py_algorithms/ch1/: binary_search.py
src/my_py_algorithms/ch2/: selection_sort.py
src/my_py_algorithms/ch3/: merge_sort.py  my_sum.py  quick_sort.py
src/my_py_algorithms/ch6/: breadth_first_search.py  search.py
src/my_py_algorithms/ch7/: search.py
src/my_py_algorithms/search/: search.py
src/my_py_algorithms/test/: Dockerfile  main.py
tests/ch1/: test_binary_search.py
tests/ch2/: test_selection_sort.py
tests/ch3/: test_merge_sort.py  test_my_sum.py  test_quick_sort.py
tests/ch6/: test_breadth_first_search.py
tests/search/: test_search.py
