[tool.poetry]
name = "my-py-algorithms"
version = "0.1.0"
description = ""
authors = ["takatsugu.ishikawa <takatsugu.ishikawa@rakuten.com>"]
readme = "README.md"
packages = [{include = "my_py_algorithms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
